hphp/hack/test/ifc/check/calls_basics.php.exp
File "calls_basics.php", line 31, characters 1-71:
Data with policy A appears in context B. (Typing[4379])
File "calls_basics.php", line 5, characters 14-19:
The data source with policy A
File "calls_basics.php", line 8, characters 14-19:
The data sink with policy B
File "calls_basics.php", line 44, characters 1-86:
Data with policy A appears in context B. (Typing[4379])
File "calls_basics.php", line 5, characters 14-19:
The data source with policy A
File "calls_basics.php", line 8, characters 14-19:
The data sink with policy B
File "calls_basics.php", line 50, characters 1-113:
Data with policy A appears in context B. (Typing[4379])
File "calls_basics.php", line 5, characters 14-19:
The data source with policy A
File "calls_basics.php", line 8, characters 14-19:
The data sink with policy B
